<resources>
    <string name="app_name">逗应用</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="setting">设置</string>
    <string name="personal_center">个人中心</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="confirm_password">确认密码</string>
    <string name="phone_num">手机号</string>
    <string name="confirm_num">验证码</string>
    <string name="click_to_get">点击获取</string>
    <string name="register">注册</string>
    <string name="no_account_click_to_register">没有账号，请点击注册</string>
    <string name="major_movie">主要作品</string>
    <string name="more_details">更多详情</string>
    <string name="summary">简介</string>
    <string name="director_list">导演表</string>
    <string name="actors_list">演员表</string>
    <string name="buy_tickets">立即购票</string>
    <string name="loading">正在加载</string>
    <string name="recent_hit">最近热播</string>
    <string name="coming_soon">即将上映</string>
    <string name="back_top">回到主页</string>
    <string name="recommend">电影推荐</string>
    <string name="local_collection">本地收藏</string>
    <string name="theme_set">主题设置</string>
    <string name="feedback">问题反馈</string>
    <string name="about">关于</string>
    <string name="collect_succeed">收藏成功</string>
    <string name="collect_deleted">收藏删除</string>
    <string name="no_more">没有更多了</string>
    <string name="list_empty">您的列表空空如也，快去收藏电影吧~</string>
    <string name="func_not_open">功能暂未开放</string>
    <string name="user_login">用户登录</string>
    <string name="user_register">用户注册</string>
    <string name="no_account">没有账号？点击注册</string>
    <string name="have_account">已有账号，点击登录</string>
    <string name="delete">删除</string>
    <string name="logout">注销当前账号</string>
    <string name="Theme_picker">主题设置</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
</resources>
