<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- 登录部分界面 -->
            <RelativeLayout
                android:id="@+id/login_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.roy.douproject.widget.ClearableEditTextWithIcon
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_white_normal"
                    android:drawablePadding="15dp"
                    android:hint="@string/username"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp" />

                <com.roy.douproject.widget.ClearableEditTextWithIcon
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_username"
                    android:background="@drawable/edittext_white_normal"
                    android:drawablePadding="15dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_password"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorAccent"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <!-- 注册部分界面 -->
            <RelativeLayout
                android:id="@+id/register_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personal_center_toolbar">

                <com.roy.douproject.widget.ClearableEditTextWithIcon
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_white_normal"
                    android:drawablePadding="15dp"
                    android:hint="@string/username"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/register_username_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="18sp" />

                <com.roy.douproject.widget.ClearableEditTextWithIcon
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_username"
                    android:background="@drawable/edittext_white_normal"
                    android:drawablePadding="15dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp" />

                <com.roy.douproject.widget.ClearableEditTextWithIcon
                    android:id="@+id/register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_password"
                    android:background="@drawable/edittext_white_normal"
                    android:drawablePadding="15dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/register_password_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/register_password"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="18sp" />

                <com.roy.douproject.widget.ClearableEditTextWithIcon
                    android:id="@+id/phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_confirm_password"
                    android:background="@drawable/edittext_white_normal"
                    android:drawablePadding="15dp"
                    android:hint="@string/phone_num"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/confirm_num_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_num">

                    <com.roy.douproject.widget.ClearableEditTextWithIcon
                        android:id="@+id/confirm_num"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/edittext_white_normal"
                        android:drawablePadding="15dp"
                        android:hint="@string/confirm_num"
                        android:inputType="number"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/get_confirm_num"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/click_to_get"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/confirm_num_layout"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorAccent"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />


            </RelativeLayout>

            <!-- 模式切换 -->
            <TextView
                android:id="@+id/switch_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_view"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/no_account_click_to_register"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>