<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ToolBarTheme">
        <ImageView
            android:id="@+id/collect"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:background="@drawable/star_empty"/>
    </android.support.v7.widget.Toolbar>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:paddingLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="120dp"
                    android:layout_height="171dp"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/movie_original_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/movie_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/movie_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/movie_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/movie_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/movie_watched"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/movie_want_watch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_textview"
                android:padding="3dp"
                android:text="@string/summary" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@color/bg_light_gray"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_textview"
                android:padding="3dp"
                android:text="@string/director_list" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_directors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"></android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_textview"
                android:padding="3dp"
                android:text="@string/actors_list" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_stars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"></android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/movie_more_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/more_details" />

                <Button
                    android:id="@+id/buy_movie_tickets"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/buy_tickets" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>